clean the mess & give the proper form

--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 matches verificator
-creates two random chars strings & gives their matches persent
+creates two random chars strings(length can be changed) & gives their matches persent
